--- a/final/force-app/main/default/aura/modalForCar/modalForCar.css
+++ b/final/force-app/main/default/aura/modalForCar/modalForCar.css
@@ -86,6 +86,11 @@ div.slds-m-around_xx-large.cModalForCar div.bottom-price:hover {
     font-size: 35px;
   }
 }
-
-
-
+@media (min-width: 48em) {
+  div.slds-m-around_xx-large.cModalForCar section.slds-modal.slds-fade-in-open div.slds-modal__container {
+    margin: 0 auto;
+    width: 83%;
+    max-width: 70rem;
+    min-width: 20rem;
+  }
+}
