--- a/final/force-app/main/default/aura/home/home.css
+++ b/final/force-app/main/default/aura/home/home.css
@@ -18,7 +18,7 @@ div.cmp-container.cHome.cMain img {
   display: flex;
   flex-wrap: wrap;
   width: 515px;
-  height: 290px;
+  max-height: 300px;
   transform: none;
 }
 
