--- a/final/force-app/main/default/aura/main/main.cmp
+++ b/final/force-app/main/default/aura/main/main.cmp
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
   <aura:handler name="cmpEvent"
     event="c:componentEvent"
     action="{!c.handleComponentEvent}"/>
