--- a/final/force-app/main/default/aura/services/services.css
+++ b/final/force-app/main/default/aura/services/services.css
@@ -6,22 +6,40 @@ h1.cServices.cMain {
 
 div.container.cServices.cMain {
   display: flex;
-  box-sizing: border-box;
-  flex-direction: row;
-  flex-wrap: wrap;
+  justify-content: space-evenly;
   align-items: center;
-  margin: 50px;
-  padding: 34px;
-  max-width: -moz-available;
-  max-width: -webkit-available;
-  text-align: left;
-  justify-content: center;
+  flex-wrap: nowrap;
+  height: auto;
+}
+
+div.container.cServices.cMain div.item:hover {
+  background: linear-gradient(130deg, #503bff 0%, #8293ff 100%);
+  box-shadow: none;
 }
 
 div.container.cServices.cMain div.item {
-  max-width: 400px;
+  width: 250px;
+  height: 250px;
+  border-radius: 10px;
+  background-color: white;
+  margin: 20px;
+  text-align: center;
+  transition: 0.3s all ease-in-out;
+  position: relative;
+  box-shadow: 0px 0px 15px background;
+}
+
+div.container.cServices.cMain div.item p.title {
+  font-size: 24px;
+  color: #8293ff;
+  font-weight: bold;
   padding: 10px;
-  border: 1px solid saddlebrown;
+}
+
+div.container.cServices.cMain div.item p {
+  color: #8293ff;
+  font-size: 15px;
+  height: 20%;
 }
 
 div.container.cServices.cMain div.item p span.fa {
@@ -34,4 +52,10 @@ span.line.cServices.cMain {
   background-color: #000000;
   display: block;
   margin: 2% auto;
+}
+
+@media only screen and (max-width: 1200px) {
+  div.container.cServices.cMain {
+    flex-wrap: wrap;
+  }
 }
